# axum_askama_htmx_example

./: Cargo.toml
src/: main.rs
templates/: index.html
