[package]
name = "htmx-probe"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "form"]}
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
